--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "local-deploy": "npx hardhat run --network localhost ./scripts/develop.js",
     "node": "hardhat node",
     "client": "cd client && npm run serve",
-    "deploy": "hardhat run --network coverage",
+    "deploy": "hardhat run --network NETWORK_ID coverage",
     "test": "hardhat test --network coverage",
     "coverage": "hardhat coverage",
     "coverage-report": "hardhat coverage report",
